--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
-*.log
+node_modules/
+.idea/
 .DS_Store
-node_modules
-.cache
-dist
-.next
-tsconfig.tsbuildinfo
+*.log
+.cache/
+.rpt2_cache/
+.tsbuildinfo
